# cv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile-dev  Makefile  main.py  pyproject.toml
src/data/: database.py
src/models/: __init__.py  app_project_model.py
src/repositories/: app_project_repo.py  app_repo.py
src/router/routes/: create_app_project.py  get_app_project.py  list_app_projects.py  update_app_project.py
src/settings/: app_settings.py
srcs/: docker-compose.yml
srcs/backend/: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-dev  app.py  app_repo.py  app_repo_service.py  main.py  models.py  pyproject.toml  requirements.txt  server.js
srcs/backend/models/: __init__.py  app_repo.py  app_repo_model.py
srcs/backend/repositories/: __init__.py  app_project_repo.py  app_repo.py
srcs/backend/router/routes/: 1  projects.py  update_app_project.py
srcs/backend/routes/: __init__.py  create_app_project.py  delete_app_project.py  get_app_project.py  list_app_projects.py  projects.py  update_app_project.py
srcs/backend/services/: app_repo_service.py
srcs/backend/src/controllers/: __init__.py  create_app_project_controller.py
srcs/backend/src/data/: __init__.py  database.py
srcs/backend/src/models/: __init__.py  app_project.py  (+1 more)
srcs/backend/tests/: conftest.py
srcs/frontend/: Dockerfile  app.js  index.html  package-lock.json  package.json  styles.css
srcs/frontend-rust/: Dockerfile  LICENSE-MIT  README.md  index.html
srcs/frontend/src/: App.vue
srcs/nginx/: default.conf  nginx.conf
srcs/observability/: docker-compose.yml
(+13 files in other folders)
